@@ -16,13 +16,22 @@ import os
 import time
 import re
 import string
+import docutils
 from docutils import frontend, nodes, languages, writers, utils, transforms
 from docutils.writers.newlatex2e import unicode_map
+
+# compatibility module for Python <= 2.4
+if not hasattr(string, 'Template'):
+    import docutils._string_template_compat
+    string.Template = docutils._string_template_compat.Template
 
 class Writer(writers.Writer):
 
     supported = ('latex','latex2e')
     """Formats this writer supports."""
+
+    default_template = 'template.tex'
+    default_template_path = os.path.dirname(__file__)
 
     settings_spec = (
         'LaTeX-Specific Options',
@@ -55,7 +64,7 @@ class Writer(writers.Writer):
           ['--attribution'],
           {'choices': ['dash', 'parentheses', 'parens', 'none'],
            'default': 'dash', 'metavar': '<format>'}),
-        ('Specify LaTeX packages/stylesheets. '
+         ('Specify LaTeX packages/stylesheets. '
          ' A style is referenced with \\usepackage if extension is '
          '".sty" or omitted and with \\input else. '
           ' Overrides previous --stylesheet and --stylesheet-path settings.',
@@ -68,7 +77,7 @@ class Writer(writers.Writer):
           {'metavar': '<file>', 'overrides': 'stylesheet'}),
          ('Embed the stylesheet in the output LaTeX file.  The stylesheet '
           'file must be accessible during processing. '
-          ' Default: link to stylesheets',
+          'Default: link to stylesheets',
           ['--embed-stylesheet'],
           {'default': 0, 'action': 'store_true',
            'validator': frontend.validate_boolean}),
@@ -76,6 +85,9 @@ class Writer(writers.Writer):
           ' This is the default (if not changed in a config file).',
           ['--link-stylesheet'],
           {'dest': 'embed_stylesheet', 'action': 'store_false'}),
+         ('Specify the template file. Default: "%s".' % default_template,
+          ['--template'],
+          {'default': default_template, 'metavar': '<file>'}),
          ('Table of contents by Docutils (default) or LaTeX. '
           '(Docutils does not know of pagenumbers.) ',
           ['--use-latex-toc'],
@@ -196,10 +208,25 @@ class Writer(writers.Writer):
     def translate(self):
         visitor = self.translator_class(self.document)
         self.document.walkabout(visitor)
-        self.output = visitor.astext()
         # copy parts
-        for attr in self.visitor_attributes:
-            setattr(self, attr, getattr(visitor, attr))
+        for part in visitor_attributes:
+            setattr(self, part, getattr(visitor, part))
+        self.output = self.apply_template()
+
+    def apply_template(self):
+        # Get template string from file
+        try:
+            file = open(self.document.settings.template, 'rb')
+        except IOError:
+            file = open(os.path.join(os.path.dirname(__file__),
+                                     self.document.settings.template), 'rb')
+        template = string.Template(file.read())
+        file.close()
+        # create dictionary of substitutions
+        subs = self.assemble_parts()
+        subs['encoding'] = self.document.settings.output_encoding
+        subs['version'] = docutils.__version__
+        return template.substitute(subs)
 
     def assemble_parts(self):
         writers.Writer.assemble_parts(self)
@@ -209,6 +236,7 @@ class Writer(writers.Writer):
                 self.parts[part] = ''.join(getattr(self, part))
             else:
                 self.parts[part] = '\n'.join(getattr(self, part))
+        return self.parts
 
 
 class Babel(object):
@@ -773,8 +801,6 @@ class LaTeXTranslator(nodes.NodeVisitor):
     linking = PreambleCmds.linking # if false, hyperref is not loaded
     # TODO: use a config value?
 
-    generator = '% generated by Docutils <http://docutils.sourceforge.net/>'
-
     # Config setting defaults
     # -----------------------
 
@@ -923,7 +949,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
 
         # packages and/or stylesheets
         # ---------------------------
-        self.stylesheet = ['\n%%% User specified packages and stylesheets']
+        self.stylesheet = []
         # get list of style sheets from settings
         styles = utils.get_stylesheet_list(settings)
         # adapt path if --stylesheet_path is used
@@ -947,10 +973,11 @@ class LaTeXTranslator(nodes.NodeVisitor):
                     self.stylesheet.append(r'\usepackage{%s}' % base)
                 else:
                     self.stylesheet.append(r'\input{%s}' % sheet)
+        if self.stylesheet:
+            self.stylesheet.append('') # trailing blank line
 
         # Part of LaTeX preamble before style sheet(s)
         self.head_prefix = [
-              self.generator,
               self.latex_head % (self.d_options,self.settings.documentclass),
               ## '%%% Requirements',
               # multi-language support (language is in document settings)
@@ -980,9 +1007,9 @@ class LaTeXTranslator(nodes.NodeVisitor):
         # an empty string supresses the "auto-date" feature of \maketitle
         self.date = ''
 
-        self.body_prefix = ['\n%%% Body\n\\begin{document}\n']
+        self.body_prefix = ['\\begin{document}\n']
         self.body = []
-        self.body_suffix = ['\n\\end{document}\n']
+        self.body_suffix = ['\\end{document}']
         self.context = []
 
         # Where to collect the output of visitor methods
@@ -1477,20 +1504,19 @@ class LaTeXTranslator(nodes.NodeVisitor):
 
     def visit_docinfo(self, node):
         self.out = self.docinfo
-        self.out.append('\n% Docinfo\n'
-                        '\\begin{center}\n'
-                        '\\begin{tabularx}{\\DUdocinfowidth}{lX}\n')
 
     def depart_docinfo(self, node):
         self.out = self.body
         # Some itmes (e.g. author) end up at other places
-        if len(self.docinfo) == 1:
-            self.docinfo = []
-        else:
+        if self.docinfo:
             # tabularx: automatic width of columns, no page breaks allowed.
             self.requirements['tabularx'] = r'\usepackage{tabularx}'
             self.fallbacks['_providelength'] = PreambleCmds.providelength
             self.fallbacks['docinfo'] = PreambleCmds.docinfo
+            #
+            self.docinfo.insert(0, '\n% Docinfo\n'
+                                '\\begin{center}\n'
+                                '\\begin{tabularx}{\\DUdocinfowidth}{lX}\n')
             self.docinfo.append('\\end{tabularx}\n'
                                 '\\end{center}\n')
 
@@ -1548,8 +1574,6 @@ class LaTeXTranslator(nodes.NodeVisitor):
         # a) conditional requirements (before style sheet)
         self.head_prefix += self.requirements.sortedvalues()
         # b) coditional fallback definitions (after style sheet)
-        self.head.append(
-            '\n%%% Fallback definitions for Docutils-specific commands')
         self.head += self.fallbacks.sortedvalues()
         # c) hyperlink setup and PDF metadata
         self.head.append(self.linking % (self.colorlinks,
@@ -1576,7 +1600,7 @@ class LaTeXTranslator(nodes.NodeVisitor):
                                      self.date))
         # docinfo might alse be given for a document without title
         self.body_prefix += self.docinfo
-        if ((self.title or self.author_stack) and 
+        if ((self.title or self.author_stack) and
             self.settings.use_titlepage_env):
             self.body_prefix.append('\\thispagestyle{empty}\n'
                                     '\\end{titlepage}')
@@ -1844,6 +1868,15 @@ class LaTeXTranslator(nodes.NodeVisitor):
 
     def visit_footnote_reference(self, node):
         if self.use_latex_footnotes:
+            # TODO: insert footnote content at (or near) this place
+            # print "footnote-ref to", node['refid']
+            # footnotes = (self.document.footnotes +
+            #              self.document.autofootnotes +
+            #              self.document.symbol_footnotes)
+            # for footnote in footnotes:
+            #     # print footnote['ids']
+            #     if node.get('refid', '') in footnote['ids']:
+            #         print 'matches', footnote['ids']
             self.out.append('\\footnotemark['+self.encode(node.astext())+']')
             raise nodes.SkipNode
         href = ''
